[tool.poetry]
name = "geojsoner"
version = "0.1.0"
description = ""
authors = ["nonylene <nonylene@gmail.com>"]
license = "CC0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fiona = "*"
shapely = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
